--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -73,8 +73,8 @@ datalab
 
 %p#free-trial Next, I clicked this link:
 %p
-  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-free-trial/index.html' target='x')
-    https://codelabs.developers.google.com/codelabs/cpb100-free-trial/index.html
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-free-trial' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-free-trial
     
 %p I saw a simple path through 4 pages.
 
