--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1,4 +1,4 @@
-%h1 Lesson 001 [ Google GCP ]
+%h1#top Lesson 001 [ Google GCP ]
 %p I started this lesson by studying the URL listed below:
 %p
   %a(href='https://codelabs.developers.google.com/cpb100' target='x')
@@ -35,39 +35,42 @@
     %a(href='https://codelabs.developers.google.com/codelabs/cpb100-serverless-ingest' target='x')
       https://codelabs.developers.google.com/codelabs/cpb100-serverless-ingest
   %li
-    %a(href='https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset' target='x')
-      https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset
-  %li
     %a(href='https://codelabs.developers.google.com/codelabs/cpb100-distributed-landsat' target='x')
       https://codelabs.developers.google.com/codelabs/cpb100-distributed-landsat
   %li
     %a(href='https://codelabs.developers.google.com/codelabs/cpb100-datalab' target='x')
       https://codelabs.developers.google.com/codelabs/cpb100-datalab
 
+
+
 %p The above links are discussed below:
 %ul
   %li
     %a(href='#free-trial') free-trial
-
   %li
     %a(href='#compute-engine') compute-engine
-
   %li
     %a(href='#cloud-storage') cloud-storage
   %li
     %a(href='#cloud-sql') cloud-sql
+  %li
+    %a(href='#dataproc') dataproc
+  %li
+    %a(href='#bigquery-dataset') bigquery-dataset
+  %li
+    %a(href='#tensorflow') tensorflow
+  %li
+    %a(href='#translate-api') translate-api
+  %li
+    %a(href='#serverless-ingest') serverless-ingest
+  %li
+    %a(href='#distributed-landsat') distributed-landsat
+  %li
+    %a(href='#datalab') datalab
 
 
-cloud-sql
-dataproc
-bigquery-dataset
-tensorflow
-translate-api
-serverless-ingest
-bigquery-dataset
-distributed-landsat
-datalab
 
+%hr/
 
 %h2#free-trial Free-Trial
 
@@ -119,16 +122,16 @@ datalab
 
 %p Then I verified that the "hamburger-link" in the upper-left behaved well when I clicked it.
 
-%p It did behave well and I considered my interaction with this page to be done:
-%p
-  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-free-trial/index.html' target='x')
-    https://codelabs.developers.google.com/codelabs/cpb100-free-trial/index.html
-%hr/
+%p It did behave well and I was ready to move on.
+
 %p I returned to the URL listed below:
 %p
   %a(href='https://codelabs.developers.google.com/cpb100' target='x')
     https://codelabs.developers.google.com/cpb100
 
+%a(href='#top') [top]
+
+%hr/
 
 %h2#compute-engine Compute-Engine
 
@@ -211,13 +214,14 @@ datalab
 
 %p The above shell commands worked perfectly in my new GCP instance.
 
-%hr/
-
 %p I returned to the URL listed below:
 %p
   %a(href='https://codelabs.developers.google.com/cpb100' target='x')
     https://codelabs.developers.google.com/cpb100
 
+%a(href='#top') [top]
+
+%hr/
 
 %h2#cloud-storage Cloud-Storage
 
@@ -415,13 +419,14 @@ datalab
 
 %p I followed the instructions in that page to delete my GCP instance.
 
-%hr/
-
 %p I returned to the URL listed below:
 %p
   %a(href='https://codelabs.developers.google.com/cpb100' target='x')
     https://codelabs.developers.google.com/cpb100
 
+%a(href='#top') [top]
+
+%hr/
 
 %h2#cloud-sql Cloud-Sql
 
@@ -821,8 +826,52 @@ datalab
 %p If I want to return to that node its URL is listed below:
 
 %p
-  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html' target='x')
-    https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql
 
+%p I returned to the URL listed below:
+%p
+  %a(href='https://codelabs.developers.google.com/cpb100' target='x')
+    https://codelabs.developers.google.com/cpb100
+%a(href='#top') [top]
+%hr/
+%h2#dataproc Dataproc
+
+%p Next, I clicked the next link in the series:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-dataproc' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-dataproc
+
+%p I studied the page it served me:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-dataproc/#0' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-dataproc/#0
+  
+
+%a(href='#top') [top]
+%h2#bigquery-dataset Bigquery-Dataset
+%p under construction
+
+%a(href='#top') [top]
+%h2#tensorflow TensorFlow
+%p under construction
+
+%a(href='#top') [top]
+%h2#translate-api Translate-Api
+%p under construction
+
+%a(href='#top') [top]
+%h2#serverless-ingest Serverless-Ingest
+%p under construction
+
+%a(href='#top') [top]
+%h2#distributed-landsat Distributed-Landsat
+%p under construction
+
+%a(href='#top') [top]
+%h2#datalab  Datalab
+%p under construction
+
+%a(href='#top') [top]
 
 %hr/
