--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -847,6 +847,28 @@
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-dataproc/#0' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-dataproc/#0
   
+%p I started a Cloud-Shell.
+
+%p I verifed that repo: "training-data-analyst" was still available.
+
+%p I verified that my MySQL instance was still available.
+
+%p I navigated to the URL listed below:
+
+%p
+  %a(href='https://console.cloud.google.com/sql' target='x')
+    https://console.cloud.google.com/sql
+
+%p I clicked the icon for the MySQL instance.
+
+%p I followed the import procedure I followed in the previous lab.
+
+%p I collected output from Cloud-Shell during my effort to verify tables:
+
+
+.syntax
+  %pre
+    =render 'lesson001k'
 
 
 
