--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -871,7 +871,45 @@
     =render 'lesson001k'
 
 
+%p I clicked the next link in the series:
 
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-dataproc/#1' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-dataproc/#1
+
+%p I studied the page it served me.
+
+%p I clicked the next link in the series:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-dataproc/#2' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-dataproc/#2
+
+%p I studied the page it served me.
+
+%p I noted the region of my Cloud SQL instance: "us-central1".
+
+%p I clicked the upper-left-hamburger-link and from there clicked: "Dataproc".
+
+%p GCP served me a page with blue-button: "Enable API".
+
+%p I clicked it.
+
+%p GCP served me a page with blue-button: "Create cluster".
+
+%p I clicked it.
+
+%p GCP served me a form to configure the cluster.
+
+%p I ensured the cluster was in same region as my Cloud SQL instance: "us-central1".
+
+%p I changed machine type of both master and worker nodes to: "n1-standard-2".
+
+%p I specified the cluster have two nodes (the minimum).
+
+%p I clicked the blue-button: "Create".
+
+%p GCP server a page indicating it was busy building the cluster.
 
 %a(href='#top') [top]
 %hr/
