--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1030,12 +1030,31 @@
   %pre
     %code.bash use recommendation_spark;
 
-%p I issued a SQL command:
+%p I issued a SQL commands:
 
 .syntax
   %pre
     =render 'lesson001p'
 
+%p I saw this:
+
+
+.syntax
+  %pre
+    =render 'lesson001q'
+
+%p In the above output I see predictions.
+
+%p So, I see that as solid evidence that I was able to finish the Dataproc lab.
+
+
+%p I clicked the next link in the series:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-dataproc/#5' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-dataproc/#5
+
+%p I studied that page.
 
 
 
