--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1056,7 +1056,21 @@
 
 %p I studied that page.
 
+%p I visited this URL:
+%p
+  %a(href='https://console.cloud.google.com/sql/instances' target='x')
+    https://console.cloud.google.com/sql/instances
+    
+%p I selected my instance and asked GCP to delete it to prevent more charges against my account.  
 
+%p I visited this URL:
+%p
+  %a(href='https://console.cloud.google.com/dataproc' target='x')
+    https://console.cloud.google.com/dataproc
+  
+%p I selected my instance and asked GCP to delete it to prevent more charges against my account.  
+
+%p That ended my interaction with the CPB100-node I call: "Dataproc".
 
 %a(href='#top') [top]
 %hr/
