--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -997,7 +997,7 @@
   %pre
     %code.bash gs://cs101feb2018/train_and_apply.py
 
-%p Near the bottom, I clicked on the blue-button: "Subimit"
+%p Near the bottom, I clicked on the blue-button: "Submit"
 
 %p GCP accepted the job and then gave it a status of: "Running".
 
