--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1075,7 +1075,25 @@
 %a(href='#top') [top]
 %hr/
 %h2#bigquery-dataset Bigquery-Dataset
+
+%p Next, I clicked the next link in the series:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset
+
+%p I studied the page it served me:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset/#0' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset/#0
+  
+
+
+
 %p under construction
+
+
+
 
 %a(href='#top') [top]
 %hr/
