--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1142,10 +1142,23 @@
 
 %p GCP offered a better response:
 
-
 .syntax
   %pre
     =render 'lesson001s'
+
+%p I clicked the web preview square-button at top-right.
+
+%p I changed the port to 8081 and clicked through.
+
+%p GCP loaded a page from this URL:
+
+%p
+  %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#' target='x')
+    https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#
+
+%p I captured an image of the page:
+
+%img(src='/lesson001/lesson001t.png')
 
 
 
