--- a/app/views/lessons/_lesson001m.erb
+++ b/app/views/lessons/_lesson001m.erb
@@ -15,7 +15,8 @@ ERROR: (gcloud.compute.instances.describe) Could not fetch resource:
 
 IP address of cluster-27ae-w-1 is /32
 Authorizing [/32,/32,/32] to access cloudsql=rentals
-ERROR: (gcloud.sql.instances.patch) argument --authorized-networks: Bad value [/32]: Must be specified in CIDR notation, also known as 'slash' notation (e.g. 192.168.100.0/24).
+ERROR: (gcloud.sql.instances.patch) argument --authorized-networks: Bad value [/32]:
+Must be specified in CIDR notation, also known as 'slash' notation (e.g. 192.168.100.0/24).
 Usage: gcloud sql instances patch INSTANCE [optional flags]
   optional flags may be  --activation-policy | --assign-ip | --async |
                          --authorized-gae-apps | --authorized-networks |
