--- a/app/views/lessons/_lesson001r.erb
+++ b/app/views/lessons/_lesson001r.erb
@@ -5,7 +5,9 @@ Creating the firewall rule datalab-network-allow-ssh
 Creating the disk mydatalabvm-pd
 Creating the repository datalab-notebooks
 
-ERROR: (gcloud.source.repos.create) ResponseError: status=[PERMISSION_DENIED], code=[403], message=[User [cs101@gmail.com] does not have permission to access project [cpb100-195004] (or it may not exist): The caller does not have permission].
+ERROR: (gcloud.source.repos.create) ResponseError: status=[PERMISSION_DENIED], code=[403],
+message=[User [cs101@gmail.com] does not have permission to access project [cpb100-195004]
+(or it may not exist): The caller does not have permission].
 details:
 - Cloud Source Repositories API is not enabled. Please enable the API on the Google
   Cloud console.
