--- a/app/views/lessons/_lesson001s.erb
+++ b/app/views/lessons/_lesson001s.erb
@@ -4,7 +4,8 @@ Creating the repository datalab-notebooks
 Creating the instance mydatalabvm
 Created [https://www.googleapis.com/compute/v1/projects/cpb100-195004/zones/us-central1-f/instances/mydatalabvm].
 Connecting to mydatalabvm.
-This will create an SSH tunnel and may prompt you to create an rsa key pair. To manage these keys, see https://cloud.google.com/compute/docs/instances/adding-removing-ssh-keys
+This will create an SSH tunnel and may prompt you to create an rsa key pair.
+To manage these keys, see https://cloud.google.com/compute/docs/instances/adding-removing-ssh-keys
 Waiting for Datalab to be reachable at http://localhost:8081/
 This tool needs to create the directory [/home/cs101/.ssh] before
 being able to generate SSH keys.
