--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1160,8 +1160,12 @@
 
 %img(src='/lesson001/lesson001t.png')
 
-
-
+%p Also I visited this URL:
+%p
+  %a(href='https://console.cloud.google.com/compute/instances' target='x')
+    https://console.cloud.google.com/compute/instances
+  
+%p The page told me that GCP had just started an VM instance named "mydatalabvm".
 
 
 
