--- a/app/views/lessons/_lesson001g.erb
+++ b/app/views/lessons/_lesson001g.erb
@@ -21,7 +21,8 @@ Otherwise, they will be overwritten and de-authorized.
 Do you want to continue (Y/n)?  y
 
 The following message will be used for the patch API method.
-{"project": "cpb100-195004", "name": "rentals", "settings": {"ipConfiguration": {"authorizedNetworks": [{"value": "104.196.242.186/32"}]}}}
+{"project": "cpb100-195004", "name": "rentals", "settings":
+{"ipConfiguration": {"authorizedNetworks": [{"value": "104.196.242.186/32"}]}}}
 Patching Cloud SQL instance...done.
 Updated [https://www.googleapis.com/sql/v1beta4/projects/cpb100-195004/instances/rentals].
 cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
