--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1168,6 +1168,39 @@
 %p The page told me that GCP had just started an VM instance named "mydatalabvm".
 
 
+%p I clicked the next link in the series:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-datalab/#2' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-datalab/#2
+  
+%p I studied the page.
+
+%p I ran an experiment to verify the information there:
+
+%ul
+  %li I stopped VM instance named "mydatalabvm"
+  %li I verified that I could not access:
+  %li
+    %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#' target='x')
+      https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#
+  %li I ran a command in Cloud-Shell
+  %li
+    .syntax
+      %pre
+        %code.bash datalab connect mydatalabvm
+  %li I verified that I could access:
+  %li
+    %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#' target='x')
+      https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#
+
+
+
+
+
+
+
+
 
 %p under construction
 
