--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1193,6 +1193,9 @@
   %li
     %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#' target='x')
       https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#
+  %li It worked!
+
+
 
 
 
