--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1189,6 +1189,8 @@
     .syntax
       %pre
         %code.bash datalab connect mydatalabvm
+  %li GCP responded to that by restarting the VM instance named "mydatalabvm".
+  %li I wait a minute for the VM to boot.
   %li I verified that I could access:
   %li
     %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#' target='x')
