--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1198,18 +1198,10 @@
   %li It worked!
 
 
+%p That ended my interaction with the CPB100-node I call: "Datalab".
 
-
-
-
-
-
-
-
-
-%p under construction
-
-
+%a(href='#top') [top]
+%hr/
 
 %h2#bigquery-dataset Bigquery-Dataset
 
