--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1216,7 +1216,44 @@
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset/#0' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset/#0
   
+%p I clicked the next node in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset/#1' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset/#1
   
+%p I studied that page.
+
+%p I clicked the next node in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset/#2' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset/#2
+    
+%p I studied that page.
+
+%p I verified this URL was active:
+
+%p
+  %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#' target='x')
+    https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#
+
+%p I clicked the next node in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset/#3' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset/#3
+    
+%p I studied that page.
+
+%p I visited this URL:
+
+%p
+  %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#' target='x')
+    https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab#
+
+%p I clicked the +notebook button.
+
 
 
 %p under construction
