--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1254,6 +1254,15 @@
 
 %p I clicked the +notebook button.
 
+%p The server responded with a page which reminds me of a Jupyter Notebook UI.
+
+%p I visited this URL:
+
+%p
+  %a(href='http://github.com/GoogleCloudPlatform/training-data-analyst/tree/master/CPB100/lab4a/demandforecast.ipynb' target='x')
+    demandforecast.ipynb
+  
+
 
 
 %p under construction
