--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1261,8 +1261,10 @@
 %p
   %a(href='http://github.com/GoogleCloudPlatform/training-data-analyst/tree/master/CPB100/lab4a/demandforecast.ipynb' target='x')
     demandforecast.ipynb
-  
 
+%p I copied some Python syntax from demandforecast.ipynb into the field in the new notebook UI.
+
+%p Then I asked the UI to run it.
 
 
 %p under construction
