--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1266,9 +1266,21 @@
 
 %p Then I asked the UI to run it.
 
+%p It ran fine.
 
-%p under construction
+%p I continued the process of copy-paste-run on each section of code I found in demandforecast.ipynb
 
+%p Each section ran just as expected.
+
+%p Next, I visited this URL:
+
+%p
+  %a(href='https://console.cloud.google.com/compute/instances' target='x')
+    https://console.cloud.google.com/compute/instances
+
+%p I stopped mydatalabvm to avoid adding costs to my account.
+
+%p That ended my interaction with the CPB100-node I call: "Bigquery-Dataset".
 
 
 
