--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1205,7 +1205,7 @@
 
 %h2#bigquery-dataset Bigquery-Dataset
 
-%p Next, I clicked the next link in the series:
+%p I clicked the next link in the series:
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset
@@ -1284,10 +1284,26 @@
 
 
 
+
+
 %a(href='#top') [top]
 %hr/
 %h2#tensorflow TensorFlow
+
+
+%p I clicked the next link in the series:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-tensorflow' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-tensorflow
+
+
+
+
 %p under construction
+
+
+
+
 
 %a(href='#top') [top]
 %hr/
