--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1296,7 +1296,40 @@
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-tensorflow' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-tensorflow
 
+%p I studied the page it served me:
 
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-tensorflow/#0' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-tensorflow/#0
+  
+%p I studied the next page:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-tensorflow/#1' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-tensorflow/#1
+  
+%p I studied the next page:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-tensorflow/#2' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-tensorflow/#2
+
+%p I visited the URL listed below:
+%p
+  %a(href='http://github.com/GoogleCloudPlatform/training-data-analyst/tree/master/CPB100/lab4a/demandforecast.ipynb' target='x')
+    demandforecast.ipynb
+  
+%p I scrolled to this h2-element:
+
+%h2 Machine Learning with Tensorflow
+
+%p I studied four paragraphs below the h2-element.
+
+%p I studied the Python syntax below the paragraphs:
+
+.syntax
+  %pre
+    =render 'lesson001u'
 
 
 %p under construction
