--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1319,9 +1319,9 @@
   %a(href='http://github.com/GoogleCloudPlatform/training-data-analyst/tree/master/CPB100/lab4a/demandforecast.ipynb' target='x')
     demandforecast.ipynb
   
-%p I scrolled to this h2-element:
+%p I scrolled to this h2-element [about 2/3 to page-end]:
 
-%h2 Machine Learning with Tensorflow
+%p "Machine Learning with Tensorflow"
 
 %p I studied four paragraphs below the h2-element.
 
@@ -1330,6 +1330,26 @@
 .syntax
   %pre
     =render 'lesson001u'
+
+%p I visited the console-URL:
+%p
+  %a(href='https://console.cloud.google.com' target='x')
+    https://console.cloud.google.com
+
+%p I started a Cloud-Shell by clicking an icon in upper-left.
+
+%p Inside the Cloud-Shell, I issued a shell command:
+
+.syntax
+  %pre
+    %code.bash datalab connect mydatalabvm
+  
+
+
+
+
+
+
 
 
 %p under construction
