--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1370,16 +1370,27 @@
   %pre
     =render 'lesson001u'
 
-%p I returned to the top of demandforecast.ipynb
+%p
+  I returned to the top of
+  %a(href='http://github.com/GoogleCloudPlatform/training-data-analyst/tree/master/CPB100/lab4a/demandforecast.ipynb' target='x')
+    demandforecast.ipynb
 
-%p I copied syntax from demandforecast.ipynb into "Untitled Notebook1".
+
+%p
+  I copied syntax from
+  %a(href='http://github.com/GoogleCloudPlatform/training-data-analyst/tree/master/CPB100/lab4a/demandforecast.ipynb' target='x')
+    demandforecast.ipynb
+  into "Untitled Notebook1".
 
 %p I did the copying bit-by-bit; I was patient.
 
-%p I wanted to study the output a slow pace.
+%p I wanted to study the output at a slow pace.
 
-%p Eventually I worked all the way through the syntax in demandforecast.ipynb
-
+%p
+  Eventually I worked all the way through the syntax in: 
+  %a(href='http://github.com/GoogleCloudPlatform/training-data-analyst/tree/master/CPB100/lab4a/demandforecast.ipynb' target='x')
+    demandforecast.ipynb
+    
 %p Next, I visited this URL:
 
 %p
