--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1408,8 +1408,24 @@
 
 %a(href='#top') [top]
 %hr/
-%h2#translate-api Translate-Api
+%h2#translate-api Translate-API
 %p under construction
+
+
+
+%p I clicked the next link in the series:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-translate-api' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-translate-api
+
+%p I studied the page it served me:
+
+
+
+
+
+
 
 %a(href='#top') [top]
 %hr/
