--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1420,6 +1420,42 @@
 
 %p I studied the page it served me:
 
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#0' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#0
+  
+%p I studied the next page:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#1' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#1
+  
+%p I studied the next page:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#2' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#2
+  
+%p I visited this URL:
+
+%p
+  %a(href='https://console.cloud.google.com/apis' target='x')
+    https://console.cloud.google.com/apis
+
+%p I saw a blue-button: "ENABLE APIS AND SERVICES".
+
+%p I clicked it.
+
+%p GCP served me a large list of APIs.
+
+%p I enabled: "Google Cloud Vision API".
+
+
+%p I visited this URL:
+
+%p
+  %a(href='https://console.cloud.google.com/apis/credentials' target='x')
+    https://console.cloud.google.com/apis/credentials
 
 
 
