--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1451,13 +1451,17 @@
 %p I enabled: "Google Cloud Vision API".
 
 
-%p I visited this URL:
+%p GCP served me this page:
 
 %p
-  %a(href='https://console.cloud.google.com/apis/credentials' target='x')
-    https://console.cloud.google.com/apis/credentials
+  %a(href='https://console.cloud.google.com/apis/api/vision.googleapis.com/overview' target='x')
+    https://console.cloud.google.com/apis/api/vision.googleapis.com/overview
 
+%p I clicked the credentials-key-icon on the left.
 
+%p It served me a blue-button: "Create credentials".
+
+%p I clicked it.
 
 %p under construction
 
