--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1463,6 +1463,31 @@
 
 %p I clicked it.
 
+%p At that point the UI mis-matched the instructions I was following in cpb100.
+
+%p So I was confused.
+
+%p I visited this URL:
+
+%p
+  %a(href='https://console.cloud.google.com/apis/credentials/wizard' target='x')
+    https://console.cloud.google.com/apis/credentials/wizard
+
+%p From select-option control I picked value: "Google Cloud Vision API".
+
+%p Next I picked radio-button: "Yes I am using one or both".
+
+%p I clicked blue-button: "What credentials do I need?"
+
+%p GCP served me a message: "You don't need to create new credentials"
+
+%p So, I clicked blue-button: "Done".
+
+%p I followed the same process to enable Translate API, Speech API, and Natural Language APIs.
+
+
+
+
 %p under construction
 
 
